// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String           @id @default(cuid())
  auth0Id          String           @unique
  email            String           @unique
  name             String?

  // Profil détaillé (complété après inscription)
  firstName        String?
  lastName         String?
  phone            String?
  birthDate        DateTime?

  addressLine1     String?
  addressLine2     String?
  postalCode       String?
  city             String?
  country          String?

  // Informations métier / formation
  profession       String?          // Métier actuel
  employerName     String?          // Nom de l'entreprise
  wantsVtcTraining Boolean?         // Candidat formation VTC
  wantsTaxiTraining Boolean?        // Candidat formation Taxi

  // Pièces administratives (références, pas les fichiers eux‑mêmes)
  nationalIdNumber String?          // N° de CNI / passeport
  drivingLicenseNumber String?      // N° de permis
  drivingLicenseType  String?       // A, B, C, etc.
  drivingLicenseIssuedAt DateTime?  // Date de délivrance du permis

  // Tracking Auth0
  lastLoginAt      DateTime?        // Dernière connexion via Auth0

  // Paiement / facturation
  stripeCustomerId String?          @unique

  // Onboarding / profil
  isProfileComplete Boolean         @default(false)

  role             String           @default("STUDENT")
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  
  // Relations LMS & E-commerce
  enrollments      Enrollment[]
  progress         LessonProgress[]
  orders           Order[]
  
  // Relations anciennes (legacy / présentiel)
  bookings         Booking[]
  sessionBookings  SessionBooking[]
  sessionsTeaching Session[]        @relation("TeacherSessions")

  // Relations annexes
  documents        UserDocument[]
  addresses        Address[]
}

model Course {
  id          String       @id @default(cuid())
  title       String
  slug        String?      @unique
  description String
  price       Float        @default(0)
  imageUrl    String?
  isPublished Boolean      @default(false)
  type        String       @default("VTC")
  
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt

  // Relations LMS
  modules     Module[]
  enrollments Enrollment[]
  orders      Order[] // Un order peut être lié à un course spécifique (ou plusieurs via relation n-n si panier)
  categories  CourseOnCategory[]
  orderItems  OrderItem[]
  
  // Relations anciennes
  bookings    Booking[]
  sessions    Session[]
  courseSessions CourseSession[]

  @@index([type])
  @@index([isPublished, type])
}

// Catégories de cours (pour organiser le catalogue)
model CourseCategory {
  id          String             @id @default(cuid())
  slug        String             @unique
  name        String
  description String?
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt

  courses     CourseOnCategory[]
}

// Table de liaison N-N entre Course et CourseCategory
model CourseOnCategory {
  courseId   String
  categoryId String

  course   Course         @relation(fields: [courseId], references: [id], onDelete: Cascade)
  category CourseCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  assignedAt DateTime @default(now())

  @@id([courseId, categoryId])
  @@index([categoryId])
}

model Module {
  id          String   @id @default(cuid())
  title       String
  description String?
  position    Int      @default(0)
  isPublished Boolean  @default(false)
  
  courseId    String
  course      Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)
  
  lessons     Lesson[]
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([courseId, position])
}

model Lesson {
  id          String   @id @default(cuid())
  title       String
  description String?
  videoUrl    String?  // URL Vimeo ou S3
  content     String?  // Contenu texte / Markdown
  position    Int      @default(0)
  isPublished Boolean  @default(false)
  isFree      Boolean  @default(false) // Pour preview avant achat
  duration    Int      @default(0) // En secondes
  
  moduleId    String
  module      Module   @relation(fields: [moduleId], references: [id], onDelete: Cascade)
  
  progress    LessonProgress[]
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([moduleId, position])
}

model CourseSession {
  id          String   @id @default(cuid())
  courseId    String
  course      Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)
  
  startDate   DateTime
  endDate     DateTime
  location    String?  // e.g. "Centre Épinay", "Paris 10"
  maxSpots    Int      @default(10)
  bookedSpots Int      @default(0)
  
  isPublished Boolean  @default(true)
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([courseId])
  @@index([startDate])
}

model LessonProgress {
  id          String   @id @default(cuid())
  isCompleted Boolean  @default(false)
  
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  lessonId    String
  lesson      Lesson   @relation(fields: [lessonId], references: [id], onDelete: Cascade)
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@unique([userId, lessonId])
}

model Enrollment {
  id        String            @id @default(cuid())
  userId    String
  courseId  String
  status    String            @default("ACTIVE")
  progress  Int               @default(0) // pourcentage 0–100 calculé
  
  user      User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  course    Course            @relation(fields: [courseId], references: [id], onDelete: Cascade)
  
  createdAt DateTime          @default(now())
  updatedAt DateTime          @updatedAt

  @@unique([userId, courseId])
  @@index([courseId])
}

model Order {
  id              String        @id @default(cuid())
  userId          String
  user            User          @relation(fields: [userId], references: [id])
  
  courseId        String?       // Achat direct d'un cours (simplifié)
  course          Course?       @relation(fields: [courseId], references: [id])
  
  amount          Float
  currency        String        @default("EUR")
  status          String        @default("PENDING")
  stripeSessionId String?       @unique
  stripePaymentId String?
  
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  items           OrderItem[]

  payments        Payment[]
  couponId        String?
  coupon          Coupon?       @relation(fields: [couponId], references: [id])

  @@index([userId])
  @@index([courseId])
  @@index([status])
  @@index([createdAt])
  @@index([couponId])
}

// Détail des lignes de commande (panier multi‑cours)
model OrderItem {
  id        String   @id @default(cuid())
  orderId   String
  courseId  String
  quantity  Int      @default(1)
  unitPrice Float

  order   Order  @relation(fields: [orderId], references: [id], onDelete: Cascade)
  course  Course @relation(fields: [courseId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([orderId])
  @@index([courseId])
}

// --- Modèles Legacy / Présentiel (Location & Planning) ---

model Vehicle {
  id          String         @id @default(cuid())
  model       String
  brand       String
  type        String
  pricePerDay Float
  status      String        @default("AVAILABLE")
  image       String?
  features    String?        // JSON string or comma separated
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  bookings    Booking[]

  @@index([status])
}

model Booking {
  id          String        @id @default(cuid())
  userId      String
  courseId    String?
  vehicleId   String?
  startDate   DateTime
  endDate     DateTime?
  status      String        @default("PENDING")
  totalAmount Float
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  user    User     @relation(fields: [userId], references: [id])
  course  Course?  @relation(fields: [courseId], references: [id])
  vehicle Vehicle? @relation(fields: [vehicleId], references: [id])

  @@index([userId])
  @@index([courseId])
  @@index([vehicleId])
  @@index([status])
  @@index([startDate])
}

model Session {
  id        String       @id @default(cuid())
  courseId  String
  teacherId String?
  startsAt  DateTime
  endsAt    DateTime
  mode      String       @default("IN_PERSON")
  location  String?
  maxSeats  Int?
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt

  course   Course          @relation(fields: [courseId], references: [id])
  teacher  User?           @relation("TeacherSessions", fields: [teacherId], references: [id])
  bookings SessionBooking[]

  @@index([courseId])
  @@index([teacherId])
  @@index([startsAt])
}

model SessionBooking {
  id        String                @id @default(cuid())
  sessionId String
  userId    String
  status    String                @default("BOOKED")
  createdAt DateTime              @default(now())
  updatedAt DateTime              @updatedAt

  session Session @relation(fields: [sessionId], references: [id])
  user    User    @relation(fields: [userId], references: [id])

  @@index([sessionId])
  @@index([userId])
}

// --- Contact & Support ---

model ContactMessage {
  id        String   @id @default(cuid())
  name      String
  email     String
  phone     String?
  subject   String?
  message   String
  createdAt DateTime @default(now())

  @@index([email])
  @@index([createdAt])
}

// --- Documents utilisateurs ---

model UserDocument {
  id          String   @id @default(cuid())
  userId      String
  type        String   // ID_CARD, DRIVING_LICENSE, JUSTIF_DOMICILE, etc.
  fileUrl     String   // URL vers le stockage (S3, etc.)
  status      String   @default("PENDING") // PENDING, APPROVED, REJECTED
  uploadedAt  DateTime @default(now())
  reviewedAt  DateTime?

  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([type])
  @@index([status])
}

// --- Adresses utilisateurs ---

model Address {
  id          String   @id @default(cuid())
  userId      String?
  label       String?  // Maison, Travail, etc.
  line1       String
  line2       String?
  postalCode  String
  city        String
  country     String
  isDefault   Boolean  @default(false)

  user        User?    @relation(fields: [userId], references: [id])

  @@index([userId])
}

// --- Paiements ---

model Payment {
  id                String   @id @default(cuid())
  orderId           String
  provider          String   // stripe, paypal, etc.
  providerPaymentId String
  status            String   @default("PENDING") // PENDING, SUCCEEDED, FAILED, REFUNDED
  amount            Float
  currency          String   @default("EUR")
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  order             Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@index([status])
}

// --- Coupons / Codes promo ---

model Coupon {
  id          String   @id @default(cuid())
  code        String   @unique
  description String?
  discountPct Int?     // 20 => -20%
  discountAmt Float?   // montant fixe
  validFrom   DateTime?
  validUntil  DateTime?
  maxUses     Int?
  usedCount   Int      @default(0)
  isActive    Boolean  @default(true)

  orders      Order[]

  @@index([code])
  @@index([isActive])
}

// --- Enums ---

// enum Role {
//   STUDENT
//   INSTRUCTOR
//   ADMIN
// }

// enum CourseType {
//   PERMIS_MOTO
//   PERMIS_AUTO
//   PERMIS_POIDS_LOURD
//   VTC
//   TAXI
//   SSIAP
//   INFORMATIQUE // Réintégré si besoin pour dev web
//   AUTRE
// }

// enum EnrollmentStatus {
//   PENDING
//   ACTIVE
//   COMPLETED
//   CANCELLED
// }

// enum OrderStatus {
//   PENDING
//   PAID
//   FAILED
//   REFUNDED
// }

// enum VehicleType {
//   SEDAN
//   SUV
//   ELECTRIC
//   HYBRID
//   DIESEL
// }

// enum VehicleStatus {
//   AVAILABLE
//   RENTED
//   MAINTENANCE
// }

// enum BookingStatus {
//   PENDING
//   CONFIRMED
//   CANCELLED
//   COMPLETED
// }

// enum SessionMode {
//   IN_PERSON
//   ONLINE
//   HYBRID
// }

// enum SessionBookingStatus {
//   BOOKED
//   CANCELLED
//   ATTENDED
//   NO_SHOW
// }
